--- a/css/_destaques.scss
+++ b/css/_destaques.scss
@@ -74,5 +74,8 @@ section.skills{
          font-size: 80px;
          color: $main-color;
       }
+      p{
+         text-align: center;
+      }
    }
 }
