--- a/css/main.css
+++ b/css/main.css
@@ -307,6 +307,11 @@ section.projetos h2 {
   margin-bottom: 20px;
 }
 
+section.projetos p {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 section.projetos .cards-container {
   display: -webkit-box;
   display: -ms-flexbox;
