--- a/css/main.css
+++ b/css/main.css
@@ -302,12 +302,7 @@ section.projetos {
   padding: 80px 0;
 }
 
-section.projetos h2 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-section.projetos p {
+section.projetos h2, p {
   text-align: center;
   margin-bottom: 20px;
 }
@@ -373,7 +368,7 @@ section.servicos {
   padding: 80px 0;
 }
 
-section.servicos h2 {
+section.servicos h2, p {
   text-align: center;
   margin-bottom: 20px;
 }
@@ -458,6 +453,9 @@ section.skills .skill-card {
   background-color: #212121;
   border: 1px solid #333333;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 section.skills .skill-card i {
