--- a/css/main.css
+++ b/css/main.css
@@ -430,6 +430,10 @@ section.skills h2 {
   margin-bottom: 20px;
 }
 
+section.skills p {
+  margin-top: 10px;
+}
+
 section.skills .cards-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -456,6 +460,7 @@ section.skills .skill-card {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 175px;
 }
 
 section.skills .skill-card i {
